Fix small migrate logic derp on first launch, make migrate move errors less scary