@@ -60,8 +60,8 @@ public class CreeperLauncher
                 } catch (Exception e) {
                     // shrug
                 }
+                migrate = true;
             }
-            migrate = true;
         }
 
         Settings.loadSettings();
@@ -100,16 +100,8 @@ public class CreeperLauncher
 
         doUpdate(args);
 
-        Path[] jarPath = new Path[] { null };
-
         try {
-            jarPath[0] = Path.of(CreeperLauncher.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getFileName(); // will be launcher.jar
-        } catch (URISyntaxException e) {
-            e.printStackTrace();
-        }
-
-        try {
-            Files.newDirectoryStream(Paths.get("."), path -> (path.toString().endsWith(".jar") && !path.equals(jarPath[0]))).forEach(path -> path.toFile().delete());
+            Files.newDirectoryStream(Paths.get("."), path -> (path.toString().endsWith(".jar") && !path.toString().contains(Constants.APPVERSION))).forEach(path -> path.toFile().delete());
         } catch (IOException ignored) {}
 
         Instances.refreshInstances();
@@ -150,7 +142,7 @@ public class CreeperLauncher
                             ));
                         }
                     }),
-                    new OpenModalData.ModalButton("No", "red", () -> Settings.webSocketAPI.sendMessage(new CloseModalData()))
+                    new OpenModalData.ModalButton("No", "red", () -> {})
             ));
             return false;
         });
@@ -161,12 +153,12 @@ public class CreeperLauncher
             if (Constants.BRANCH.equals("release") || Constants.BRANCH.equals("preview"))
             {
                 OpenModalData.openModal("Update", "Do you wish to change to this branch now?", List.of(
-                    new OpenModalData.ModalButton( "Yes", "green", () -> {
-                        doUpdate(args);
-                    }),
-                    new OpenModalData.ModalButton( "No", "red", () -> {
-                        Settings.webSocketAPI.sendMessage(new CloseModalData());
-                    })
+                        new OpenModalData.ModalButton( "Yes", "green", () -> {
+                            doUpdate(args);
+                        }),
+                        new OpenModalData.ModalButton( "No", "red", () -> {
+                            Settings.webSocketAPI.sendMessage(new CloseModalData());
+                        })
                 ));
                 return true;
             } else {
@@ -323,7 +315,7 @@ public class CreeperLauncher
             return true;
         } catch (Exception e) {
             System.out.println("Unable to move " + in);
-            e.printStackTrace();
+            //e.printStackTrace();
             return false;
         }
     }
